--- a/style.css
+++ b/style.css
@@ -6,3 +6,93 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header {
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #23252B;
+    box-shadow: 0 5px rgb(0, 0, 0 / 20%);
+    padding: 0 100px;
+    transition: 0.6s;
+}
+
+header .logo {
+    color: #fff;
+    font-size: 1.8em;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 2px;
+}
+
+header .navigation {
+    position: relative;
+    line-height: 75px;
+}
+
+header .navigation .menu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    user-select: none;
+}
+
+.menu-item > a {
+    color: #fff;
+    font-size: 1em;
+    text-decoration: none;
+    margin: 20px;
+    padding: 25px 0;
+}
+
+.menu-item > a:hover {
+    color: #469DFF;
+    transition: 0.3s;
+}
+
+.menu-item .sub-menu {
+    position: absolute;
+    background: #23252B;
+    top: 74px;
+    line-height: 40px;
+    list-style: none;
+    border-radius: 0 0 8px 8px;
+    box-shadow: 0 5px 25px rgb(0, 0, 0 / 20%);
+    pointer-events: none;
+    transform: translateY(35px);
+    opacity: 0;
+    transition: 0.3s;
+    transition-property: transform,opacity;
+}
+
+.menu-item:hover .sub-menu {
+    pointer-events: all;
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.menu-item .sub-menu .sub-item {
+    position: relative;
+    padding: 7px 0;
+    cursor: pointer;
+    box-shadow: inset 0px -30px 5px -30px rgba(255, 255, 255, 0.2);
+}
+
+
+.menu-item .sub-menu .sub-item a {
+    color: #fff;
+    font-size: 1em;
+    text-decoration: none;
+    padding: 15px 30px;
+}
+
+.menu-item .sub-menu .sub-item:hover {
+    background: #4080EF;
+}
